--- a/InstantWaterHeater.html
+++ b/InstantWaterHeater.html
@@ -423,7 +423,7 @@
     <div class="container-div">
       <div class="text-center py-5 position-relative titlecolor">
         <h1 class="maintitle">Factors to consider before buying a water heater?</h1>
-        <span class="factortitle">Factors to consider before buying a water heater?</span>
+        <span class="factortitle shadowtext">Factors to consider before buying a water heater?</span>
         <span class="custom-title-border  new"></span>
       </div>
       <div class="d-flex row justify-content-evenly flex-wrap">
@@ -482,7 +482,7 @@
   <div class="container-div">
     <div class="text-center py-4 position-relative">
       <h1 class="fw-bold maintitle mt-4">FAQS</h1>
-      <span class="sixtitle2">FAQS</span>
+      <span class="sixtitle2 shadowtext">FAQS</span>
       <span class="faqborder2"></span>
     </div>
     <div class="accordion" id="accordionExample">
@@ -522,7 +522,7 @@
 
   <div class="container-div">
     <div class="mt-5 background text-center font-family py-3 px-5 rounded-4">
-      <img src="/img/instantWaterHeater/post.png" class="img-note">
+      <img src="/img/instantWaterHeater/post.png" class="img-note" style="width: 150px;">
       <p class="paragraph mt-3"><strong>Note :</strong> We offer installation by a licensed plumber and experienced
         senior technicians; you can opt for whoever you prefer. Kindly note installation by our certified plumber will
         attract additional charges.</p>
@@ -601,7 +601,7 @@
   <div class="container-div mb-5">
     <div class="py-5  text-center position-relative">
       <h1 class="fw-bold maintitle">Our Works</h1>
-      <span class="h1 gallerytitle">Our Works</span>
+      <span class="h1 gallerytitle shadowtext">Our Works</span>
       <span class="proptality-border  new"></span>
       <div class="slick-controls position-absolute end-0 ">
 
@@ -628,7 +628,7 @@
   <div class="background mt-3">
     <div class="container-div font-family">
       <div class="text-center pt-3 pb-4">
-        <img src="/img/instantWaterHeater/caution icon.png" class="img-caution">
+        <img src="/img/instantWaterHeater/caution icon.png" class="img-caution" width="100px">
         <h2 class="maintitle mt-3">Caution</h2>
         <div class="w-75 mx-auto mt-4">
           <p>1. Do not try to install a water heater yourself. The improper and inadequate installation will cause
@@ -647,7 +647,7 @@
   <div class="container-div py-5 justify-content-center">
     <div class="text-center pb-3 position-relative">
       <h1 class="maintitle">Why Proptality?</h1>
-      <span class="h1 proptitle2">Why Proptality?</span>
+      <span class="h1 proptitle2 shadowtext">Why Proptality?</span>
       <span class="proptality-border  new"></span>
     </div>
     <div class="row">
@@ -757,7 +757,7 @@
     <div class="pt-3 pb-3">
       <div class="text-center position-relative">
         <h1 class="fw-bold maintitle">Customer Review</h1>
-        <span class="customtitle2">Customer Review</span>
+        <span class="customtitle2 shadowtext">Customer Review</span>
         <span class="custom-title-border  new"></span>
       </div>
     </div>
