--- a/StrongWaterHeater.html
+++ b/StrongWaterHeater.html
@@ -102,7 +102,7 @@
             <p class="paragraph">I hope this guide will give you more information about water heater options available in the market.
             </p>
             <h1 class="maintitle mt-5">Types Of Water Heater</h1>
-            <span class="heatertitle">Types Of Water Heater</span>
+            <span class="heatertitle shadowtext">Types Of Water Heater</span>
         <span class="custom-title-border  new"></span>
             <h5 class="mt-4">There are two types of water heaters
             </h5>
@@ -191,7 +191,7 @@
  <div class="container-div">
     <div class="text-center my-5 position-relative">
         <h1 class="maintitle">Installation Methods</h1>
-        <span class="methodtitle">Installation Methods</span>
+        <span class="methodtitle shadowtext">Installation Methods</span>
         <span class="custom-title-border  new"></span>
         <h5 class="mt-4">Storage water heaters can be installed in two ways.
         </h5>
@@ -350,7 +350,7 @@
 <div class="container-div py-5">
   <div class="pb-4 text-center position-relative">
     <h1 class="maintitle">Storage Water Heater Brands We Install in Singapore</h1>
-    <span class="page3title">Storage Water Heater Brands We Install in Singapore</span>
+    <span class="page3title shadowtext">Storage Water Heater Brands We Install in Singapore</span>
     <span class="faqborder2"></span>
 </div>
 <div class="d-flex justify-content-between">
@@ -422,7 +422,7 @@
   <div class="container-div">
     <div class="text-center py-5 position-relative titlecolor">
         <h1 class="maintitle">Factors to consider before buying a water heater?</h1>
-        <span class="factortitle">Factors to consider before buying a water heater?</span>
+        <span class="factortitle shadowtext">Factors to consider before buying a water heater?</span>
         <span class="custom-title-border  new"></span>
     </div>
     <div class="row justify-content-around">
@@ -497,7 +497,7 @@
  <div class="container-div">
   <div class="text-center pb-3 position-relative">
     <h1 class="fw-bold maintitle">FAQS</h1>
-    <span class="sixtitle3">FAQS</span>
+    <span class="sixtitle3 shadowtext">FAQS</span>
     <span class="faqborder2"></span>
 </div>
 <div class="accordion" id="accordionExample">
@@ -568,7 +568,7 @@
   <div class="container-div">
       <div class="text-center pb-3 position-relative">
           <h1 class="maintitle">Maintenance Checklist for Water Heaters</h1>
-    <span class="page3title">Maintenance Checklist for Water Heaters</span>
+    <span class="page3title shadowtext">Maintenance Checklist for Water Heaters</span>
     <span class="faqborder2"></span>
       </div>
       <div class="d-flex row justify-content-evenly">
@@ -636,7 +636,7 @@
   <div class="container-div mb-5">
     <div class="py-5  text-center position-relative">
       <h1 class="fw-bold maintitle">Our Works</h1>
-                <span class="h1 gallerytitle">Our Works</span>
+                <span class="h1 gallerytitle shadowtext">Our Works</span>
                     <span class="proptality-border  new"></span>
       <div class="slick-controls position-absolute end-0 ">
         
@@ -685,7 +685,7 @@
     <div class="container-div py-5 justify-content-center">
       <div class="text-center pb-3 position-relative">
           <h1 class="maintitle">Why Proptality?</h1>
-          <span class="h1 proptitle2">Why Proptality?</span>
+          <span class="h1 proptitle2 shadowtext">Why Proptality?</span>
           <span class="proptality-border  new"></span>
       </div>
           <div class="row">
@@ -810,7 +810,7 @@
       <div class="pt-3 pb-3">
       <div class="text-center position-relative">
         <h1 class="fw-bold maintitle">Customer Review</h1>
-        <span class="customtitle2">Customer Review</span>
+        <span class="customtitle2 shadowtext">Customer Review</span>
         <span class="custom-title-border  new"></span>
     </div>
   </div>
