--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
        </div>
            <!-- content -->
            <div class="row">
-           <div class="mt-sm-5 col-12 col-lg-6">
-            <h1 class='fw-bold' style="color: #111C38;">Budget-Friendly Painting Service Company in Singapore</h1>
-            <p class="mt-4">Looking for a painting service for your HDB (or) Condominium (or) Landed Residential Property in Singapore?</p>
-          <P class="mt-4">Contact us via Call or WhatsApp To Book Your Site Visit For An Exact Quotation.</P>
-           <div class="mt-5 pb-5 text-center text-sm-start">
+           <div class="mt-sm-5 col-12 col-lg-6 mainheading">
+            <h1 class='fw-bold' style="color: #111C38;">Budget-Friendly Painting Service in Singapore</h1>
+            <!-- <p class="mt-4">Looking for a painting service for your HDB (or) Condominium (or) Landed Residential Property in Singapore?</p>
+          <P class="mt-4">Contact us via Call or WhatsApp To Book Your Site Visit For An Exact Quotation.</P> -->
+           <div class="mt-5 text-center text-sm-start">
          
                   <a href="tel:+6569697999" class="m-2 btn px-5 py-3 rounded-pill border-0 red-button"><span class="px-2">
               <svg width="25" height="25" viewBox="0 0 27 27"
@@ -106,9 +106,9 @@
 </div>
 <!-- Our Service -->
 <div class="container-div mt-5 mb-3 ">
-    <div class="text-center pt-5 pb-3 position-relative">
+    <div class="text-center pt-3 pb-3 position-relative">
     <h1 class="fw-bold maintitle">We Paint</h1>
-    <span class="h1 title title-Our-service ">We Paint</span>
+    <span class="h1 title title-Our-service shadowtext">We Paint</span>
     <span class="  new title-service-border "></span>
 </div>
     <div class="mt-5 d-flex justify-content-center  row">
@@ -196,12 +196,14 @@
             <!-- cost of paints service -->
             <div class="pt-4 background">
             <div class="container-div">
-              <div class="text-center ">
-                <h2 class="mb-4 maintitle">Factors</h2>
-                <h4>Painting cost depends on
+              <div class="text-center proptext position-relative mt-3">
+                <h1 class="maintitle">Factors</h1>
+                <span class="costtitle shadowtext">Factors</span>
+                <span class="proptality-border  new"></span>
+                <h4 class="mt-3">Painting cost depends on
                 </h4>
             </div>
-            <div class="d-flex justify-content-lg-between justify-content-evenly py-5 flex-wrap">
+            <div class="d-flex justify-content-lg-between justify-content-evenly pt-4 pb-5 flex-wrap">
               <div class="card shadow rounded-4 py-3 paintcard">
                 <div class="card-body">
                   <h5 class="card-title fw-bold">Height of the building
@@ -273,7 +275,7 @@
                 <div class="pb-1 background rounded-4">
                 <div class="text-center py-3">
                   <img src="/img/did-you-know.png" style="width: 150px;">
-                  <h5 class="mt-4 px-5">When you paint your residential properties, use 60% light, 30% medium, and 10% dark colours. This colouring equation will give your home an even-toned look and feel.
+                  <h5 class="mt-4 px-2">When you paint your residential properties, use 60% light, 30% medium, and 10% dark colours. This colouring equation will give your home an even-toned look and feel.
                   </h5>
               </div>
               </div>
@@ -326,7 +328,7 @@
            <div class=" container-div  my-5">
             <div class="text-center mb-5 position-relative">
               <h1 class="maintitle">Paints we generally use in our projects</h1>
-              <span class="maintainheader">Paints we generally use in our projects</span>
+              <span class="maintainheader shadowtext">Paints we generally use in our projects</span>
               <span class="new brand-border "></span>
                <!-- <span class="forthtitle">Top Paint Brands in Singapore</span> -->
              <h5 class="mt-4">We are basically brand agnostic. We do a painting service based on your chosen brand; we don't promote any particular brands.
@@ -351,7 +353,7 @@
            <div class="container-div my-5">
             <div class="text-center py-4 position-relative">
               <h1 class="maintitle">FAQS</h1>
-              <span class="h1 title title-faqs">FAQS</span>
+              <span class="h1 title title-faqs shadowtext">FAQS</span>
               <span class=" new faqborder"></span>
           </div>
           <div class="accordion" id="accordionExample">
@@ -397,7 +399,7 @@
              <div class="container-div my-5 ">
               <div class="py-5  text-center position-relative">
                 <h1 class=" maintitle">Painting Inspirations Just For You!</h1>
-                <span class="galleryheader">Painting Inspirations Just For You!</span>
+                <span class="galleryheader shadowtext">Painting Inspirations Just For You!</span>
               <span class="new brand-border"></span>
                 <div class="slick-controls position-absolute end-0 ">
                   
@@ -473,7 +475,7 @@
                 <div class="container-div py-5 justify-content-center">
                             <div class="text-center proptext pb-3">
                                 <h1 class="maintitle">Why Proptality?</h1>
-                  <span class="h1 proptitle">Why Proptality?</span>
+                  <span class="h1 proptitle shadowtext">Why Proptality?</span>
                   <span class="proptality-border  new"></span>
                             </div>
                                 <div class="row">
@@ -599,7 +601,7 @@
                 <div class="pt-3 pb-3">
                 <div class="text-center position-relative">
                   <h1 class="fw-bold maintitle">Customer Review</h1>
-                  <span class="h1 title customtitle">Customer Review</span>
+                  <span class="h1 title customtitle shadowtext">Customer Review</span>
                   <span class="custom-title-border  new"></span>
               </div>
             </div>
@@ -800,7 +802,7 @@
                                   <p class="footerlink font-Poppins">Terms and Conditions</p>
                               </div>
                               <ul class="list-unstyled col-12 text-center addtext">
-                                <li class="font-Poppins footerlink">Proptality Ptd Ltd, Tampines North Dr. 1, #06-08,  Singapore 528559</li> 
+                                <li class="font-Poppins">Proptality Ptd Ltd, Tampines North Dr. 1, #06-08,  Singapore 528559</li> 
                             </ul>
                           </div>
                       </div>
@@ -927,7 +929,7 @@ $('.slick-carousel-2').slick({
 		// @type {string} jQuery Selector
   arrows: false,
   autoplay:true,
-  autoplaySpeed: 2000,
+  autoplaySpeed: 3000,
   speed: 300,
   slidesToShow: 1,
   slidesToScroll: 1,
