--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <div class="navigation">
                       <nav class="navbar navbar-expand-md">
                           <a class="navbar-brand" href="/"><img src="" alt="" /></a>
-                          <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse"
+                          <button class="navbar-toggler bg-white py-2" type="button" data-bs-toggle="collapse"
                               data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                               aria-expanded="false" aria-label="Toggle navigation">
                               <img src="img/menu-icon.svg" alt="" class="img-fluid" />
@@ -753,11 +753,14 @@
                     <div class="container-div container-div">
                         <div class="row">
                             <div class="col-lg-2 col-7 col-md-11 mx-auto">
-                                <div class="footer-left text-center text-lg-start d-none d-lg-flex">
+                                <div class="footer-left text-center text-lg-start d-sm-none d-lg-flex">
                                     <span><img src="/img/Logo 1.png" alt=""/></span>
                                     <!-- <p class="font-Poppins">For any property repair or <br> maintenance, Simply call us.</p> -->
                                 </div>
                             </div>
+                            <ul class="list-unstyled col-12 text-center addtext d-block d-sm-none pb-3 border-secondary border-bottom mt-4">
+                              <li class="font-Poppins">Proptality Ptd Ltd, Tampines North Dr. 1, #06-08,  Singapore 528559</li> 
+                          </ul>
                             <div class="col-lg-4 col-6 col-md-4 mt-5 mt-lg-0">
                                 <div class="footer-link">
                                     <h4>Useful Links</h4>
@@ -773,7 +776,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-6 col-md-4 mt-5 mt-lg-0">
+                            <div class="col-lg-3 col-6 col-md-3 mt-5 mt-lg-0">
                                 <div class="footer-link footer-link2">
                                     <h4>Social media</h4>
                                     <ul class="list-unstyled">
@@ -786,7 +789,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-12 col-md-4 mx-auto mt-5 mt-lg-0">
+                            <div class="col-lg-3 col-12 col-md-5 mx-auto mt-5 mt-lg-0">
                                 <div class="footer-number">
                                     <form method="post" action="subscribeMail.php">
                                         <input type="text" class="form-control" placeholder="Subscribe" name="subscribe"/>
@@ -843,8 +846,8 @@
                                         </button>
                
                                     </form>
-                                    <ul class="list-unstyled">
-                                        <li class="col-7 mx-auto col-md-12">
+                                    <ul class="list-unstyled mt-4 mt-sm-0 mt-lg-5">
+                                        <li class="col-9 mx-auto col-md-12">
                                             <a class="phone-btn text-decoration-none" href="tel:+6569697999" >
                                                 <svg width="27" height="27" viewBox="0 0 27 27" fill="none"
                                                     xmlns="http://www.w3.org/2000/svg">
@@ -855,7 +858,7 @@
                                                 + 65 6969 7999
                                             </a>
                                         </li>
-                                        <li class="col-7 mx-auto col-md-12">
+                                        <li class="col-9 mx-auto col-md-12">
                                             <a href="https://api.whatsapp.com/send?phone=6569697999&text=Hi" class="text-decoration-none">
                                                 <svg width="25" height="25" viewBox="0 0 25 25" fill="none"
                                                     xmlns="http://www.w3.org/2000/svg">
@@ -876,7 +879,7 @@
                                   <p class="footerlink font-Poppins">Privacy policy</p>
                                   <p class="footerlink font-Poppins">Terms and Conditions</p>
                               </div>
-                              <ul class="list-unstyled col-12 text-center addtext">
+                              <ul class="list-unstyled col-12 text-center addtext d-none d-sm-block">
                                 <li class="font-Poppins">Proptality Ptd Ltd, Tampines North Dr. 1, #06-08,  Singapore 528559</li> 
                             </ul>
                           </div>
