am new changes in responsive

--- a/index.html
+++ b/index.html
@@ -996,6 +996,7 @@ $('.slick-carousel-2').slick({
   $('.slick-carousel-3').slick({
 		// @type {string} jQuery Selector
     dots: true,
+    arrows : false,
   infinite: true,
   autoplay:true,
   autoplaySpeed: 1500,
