--- a/StrongWaterHeater.html
+++ b/StrongWaterHeater.html
@@ -23,7 +23,9 @@
         <div class="container-div">
              <!-- Header -->
              <div class="d-flex justify-content-between py-4 align-items-center">
-              <img src="img/Logo 1.png" style="width: 49px;height: 47px;">
+              <a href="/" >
+                <img src="img/Logo 1.png" style="width: 49px;height: 47px;">
+             </a>
               <ul class="list-unstyled d-flex">
                   <li class="px-4 fs-5 py-3"><a href="#" class="head font-Poppins">Home</a></li>
                   <li class="nav-item dropdown">
