am responsive design
responsive design of instant water heater page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a href="/">
           <img src="img/Logo1.png" style="width: 49px;height: 47px;"> 
         </a>
-       
+       <!-- header for moblie view -->
     <header class="d-block d-md-none">
       <div class="container-div">
           <div class="row">
@@ -116,7 +116,7 @@
   <!-- class="dropdown-menu" aria-labelledby="navbarDropdown" -->
 
 
-    
+    <!-- header for desktop view -->
         <ul class="list-unstyled d-flex d-none d-md-flex">
             <li class="px-lg-4 px-2 py-3 headerfont"><a href="/" class="head font-Poppins">Home</a></li>
             <li class="nav-item dropdown">
@@ -361,7 +361,7 @@
               <div class="container-div container-div mt-5">
                 <div class="pb-1 background rounded-4">
                 <div class="text-center py-3">
-                  <img src="img/did-you-know.png" style="width: 150px;">
+                  <img src="img/did-you-know.png" class="didyouknow-img">
                   <h5 class="mt-4 px-2">When you paint your residential properties, use 60% light, 30% medium, and 10% dark colours. This colouring equation will give your home an even-toned look and feel.
                   </h5>
               </div>
