--- a/InstantWaterHeater.html
+++ b/InstantWaterHeater.html
@@ -326,12 +326,12 @@
           <div class="container-div">
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <div class="accordion-item">
-                <h3 class="accordion-header text-center  mx-auto" id="flush-headingOne">
+                <div class="accordion-header text-center  mx-auto" id="flush-headingOne">
                   <button class="my-4 button collapsed text-center py-2 px-5 red-button rounded-4 border-0"
                     type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false">
                     <h4 class="fw-bold mt-1">Pricing</h4>
                   </button>
-                </h3>
+                </div>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                   data-bs-parent="#accordionFlushExample">
                   <div class="accordion-body">
