--- a/StrongWaterHeater.html
+++ b/StrongWaterHeater.html
@@ -261,7 +261,7 @@
           <!-- <p class="paragraph">If you prefer to use a storage water heater at your home, there are five types of storage water heaters on the market.</p> -->
         </div>
         <div class="d-flex flex-wrap justify-content-center">
-          <div class="card  m-4 storagecard">
+          <div class="card  m-4 storagecard shadow">
             <img src="img/StrongWaterHeater/1heater.png" class="card-img-top heaterimg" alt="1">
             <div class="card-body text-center">
               <h5 class="card-title paragraph">Electric Storage Water Heaters
@@ -274,7 +274,7 @@
             </div>
 
           </div>
-          <div class="card  m-4 storagecard">
+          <div class="card  m-4 storagecard shadow">
             <img src="img/StrongWaterHeater/2heater.jpg" class="card-img-top" alt="1">
             <div class="card-body text-center">
               <h5 class="card-title paragraph">Gas Storage Water Heaters
@@ -287,7 +287,7 @@
             </div>
 
           </div>
-          <div class="card m-4 storagecard">
+          <div class="card m-4 storagecard shadow">
             <img src="img/StrongWaterHeater/3heater.jpg" class="card-img-top heaterimg" alt="1">
             <div class="card-body text-center mt-5">
               <h5 class="card-title paragraph">Digital Storage Water Heaters
@@ -301,7 +301,7 @@
             </div>
 
           </div>
-          <div class="card m-4 storagecard">
+          <div class="card m-4 storagecard shadow">
             <img src="img/StrongWaterHeater/4heater.jpg" class="card-img-top solarimg" alt="1">
             <div class="card-body text-center ">
               <h5 class="card-title paragraph">Solar Storage Water Heaters
@@ -515,7 +515,7 @@
 
     <div class="container-div py-5 ">
       <div class="d-flex flex-wrap justify-content-center justify-content-lg-between">
-        <div class="card  brandcard my-3 mx-2">
+        <div class="card  brandcard my-3 mx-2 shadow">
           <div class="card-body">
             <h5 class="card-title paragraph text-center fw-bold">Ariston
             </h5>
@@ -523,7 +523,7 @@
           </div>
 
         </div>
-        <div class="card  brandcard  my-3 mx-2">
+        <div class="card  brandcard  my-3 mx-2 shadow">
           <div class="card-body">
             <h5 class="card-title paragraph text-center fw-bold">Joven
             </h5>
@@ -531,7 +531,7 @@
           </div>
 
         </div>
-        <div class="card  brandcard  my-3 mx-2">
+        <div class="card  brandcard  my-3 mx-2 shadow">
           <div class="card-body">
             <h5 class="card-title paragraph text-center fw-bold">Rheem
 
@@ -540,7 +540,7 @@
           </div>
 
         </div>
-        <div class="card mt-4  brandcard  my-3 mx-2">
+        <div class="card mt-4  brandcard  my-3 mx-2 shadow">
           <div class="card-body">
             <h5 class="card-title paragraph text-center fw-bold">Rubine
             </h5>
@@ -548,7 +548,7 @@
           </div>
 
         </div>
-        <div class="card mt-4  brandcard  my-3 mx-2">
+        <div class="card mt-4  brandcard  my-3 mx-2 shadow">
           <div class="card-body">
             <h5 class="card-title paragraph text-center fw-bold">Champs
 
@@ -557,7 +557,7 @@
           </div>
 
         </div>
-        <div class="card mt-4  brandcard  my-3 mx-2">
+        <div class="card mt-4  brandcard  my-3 mx-2 shadow">
           <div class="card-body">
             <h5 class="card-title paragraph text-center fw-bold">EveryHot
 
