--- a/InstantWaterHeater.html
+++ b/InstantWaterHeater.html
@@ -320,17 +320,17 @@
             <p>3. Distance power supply from the heater and inlet water pipe source to the heater.</p>
           </div>
         </div> -->
-        <div class="col-9 mx-auto">
+        <div class="col-sm-9 mx-auto">
           <!-- <h3 class="mb-3 text-center mt-4">Installation Price Of Single Point Instant Electric Water Heater:
           </h3> -->
           <div class="container-div">
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <div class="accordion-item">
-                <div class="accordion-header text-center  mx-auto" id="flush-headingOne">
-                  <button class="my-4 button collapsed text-center py-2 px-5 red-button rounded-4 border-0"
-                    type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false">
+                <div class="accordion-header text-center mx-auto "  id="flush-headingOne">
+                  <button class="my-4 button collapsed text-center py-2 px-5 red-button rounded-4 border-0  mx-auto" type="button"
+                    data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false">
                     <h4 class="fw-bold mt-1">Pricing</h4>
-                  </button>
+              </button>
                 </div>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                   data-bs-parent="#accordionFlushExample">
@@ -1103,7 +1103,7 @@
                                 + 65 6969 7999
                             </a>
                         </li>
-                        <li class="col-9 mx-auto col-md-12">
+                        <li class="col-9 mx-auto col-md-12 mt-lg-4">
                             <a href="https://api.whatsapp.com/send?phone=6569697999&text=Hi" class="text-decoration-none">
                                 <svg width="25" height="25" viewBox="0 0 25 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
