--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
     content="We are the best painting service contractor offering painting service for HDB, Condo, Landed properties & Commercial properties at economic price.">
-   
+   <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= '[https://www.googletagmanager.com/gtm.js?id=](https://www.googletagmanager.com/gtm.js?id=)'+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-W8JTSCR');</script>
+<!-- End Google Tag Manager -->
 <!-- bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 <!-- font -->
@@ -21,11 +23,12 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="icon" type="image/x-icon" href="img/favicon.png">
 <title>Painting Services Contractor Singapore | Proptality Pte Ltd Singapore</title>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= '[https://www.googletagmanager.com/gtm.js?id=](https://www.googletagmanager.com/gtm.js?id=)'+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-W8JTSCR');</script>
-<!-- End Google Tag Manager -->
 </head>
 <body>
+ <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="[https://www.googletagmanager.com/ns.html?id=GTM-W8JTSCR](https://www.googletagmanager.com/ns.html?id=GTM-W8JTSCR)"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div>
    <div class="pb-5 background ">
     <div class="container-div">
@@ -893,7 +896,7 @@
                                                 + 65 6969 7999
                                             </a>
                                         </li>
-                                        <li class="col-9 mx-auto col-md-12">
+                                        <li class="col-9 mx-auto col-md-12 mt-lg-4">
                                             <a href="https://api.whatsapp.com/send?phone=6569697999&text=Hi" class="text-decoration-none">
                                                 <svg width="25" height="25" viewBox="0 0 25 25" fill="none"
                                                     xmlns="http://www.w3.org/2000/svg">
