--- a/instant-tankless-water-heater-installation-repair-singapore.html
+++ b/instant-tankless-water-heater-installation-repair-singapore.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
   content="We offer best-in-class instant water heater installation and repair services in Singapore. Book your service now.">
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= '[https://www.googletagmanager.com/gtm.js?id=](https://www.googletagmanager.com/gtm.js?id=)'+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-W8JTSCR');</script>
+<!-- End Google Tag Manager -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,10 +27,15 @@
   <link href="css/style.css" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="img/favicon.png">
   <title>Best Instant Water Heater Installation & Repair Services Contractor Singapore | Proptality</title>
+
 </head>
 
 <body>
-  <div class="'bg-[#EAF8FF] pb-5 background">
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="[https://www.googletagmanager.com/ns.html?id=GTM-W8JTSCR](https://www.googletagmanager.com/ns.html?id=GTM-W8JTSCR)"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+  <div class="bg-[#EAF8FF] pb-5 background">
     <div class="container-div font-family">
       <!-- Header -->
       <div class="d-flex justify-content-between py-4 align-items-center">
