--- a/storage-water-heater-installation-repair-singapore.html
+++ b/storage-water-heater-installation-repair-singapore.html
@@ -2,14 +2,19 @@
 <html lang="en">
 
 <head>
+     <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-W8JTSCR');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="We are the affordable storage water heater installation company with team of expert electricians & plumbers who deliver outstanding service.">
-   <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src= '[https://www.googletagmanager.com/gtm.js?id=](https://www.googletagmanager.com/gtm.js?id=)'+i+dl;f.parentNode.insertBefore(j,f); })(window,document,'script','dataLayer','GTM-W8JTSCR');</script>
-<!-- End Google Tag Manager -->
+
   <!-- bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -33,10 +38,10 @@
   <title>Best Storage Water Heater Installation & Repair Services Contractor in Singapore</title>
 
 </head>
-
+ 
 <body>
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="[https://www.googletagmanager.com/ns.html?id=GTM-W8JTSCR](https://www.googletagmanager.com/ns.html?id=GTM-W8JTSCR)"
+ <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W8JTSCR"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
   <div class="">
